dockerfiles/k8s-buildpod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myspace
---
kind: Pod
apiVersion: v1
metadata:
  name: pod1
  namespace: myspace
  labels:
    name: pod1-label
spec:
  nodeName: k8s-master
  hostNetwork: false
  containers:
  - name: nginx-container
    image: local_image:nginx
    workingDir: /usr/src/dist
    ports:
    - name: p1
      containerPort: 80
      hostPort: 8001
      protocol: TCP
    resources:
      limits:
        cpu: '1.50'
        memory: "300Mi"
      requests:
        cpu: '0.50'
        memory: "200Mi"
    volumeMounts:
    - mountPath: /usr/src/dist
      name: test-volume
#    command: ["stress"]
#    args: ["--vm-bytes", "150M"]

  volumes:
  - name: test-volume
    hostPath:
      path: /root/workdir/project/docker-web/dist
      type: DirectoryOrCreate
---
kind: Pod
apiVersion: v1
metadata:
  name: pod2
  namespace: myspace
  labels:
    name: pod2-label
spec:
  nodeName: k8s-master
  hostNetwork: false
  containers:
  - name: nginx-container
    image: local_image:nginx
    workingDir: /usr/src/dist
    ports:
    - name: p1
      containerPort: 80
      hostPort: 8002
      protocol: TCP
    resources:
      limits:
        cpu: '1.50'
        memory: "300Mi"
      requests:
        cpu: '0.50'
        memory: "200Mi"
    volumeMounts:
    - mountPath: /usr/src/dist
      name: test-volume
#    command: ["stress"]
#    args: ["--vm-bytes", "150M"]

  volumes:
  - name: test-volume
    hostPath:
      path: /root/workdir/project/docker-web/dist
      type: DirectoryOrCreate
