dockerfiles/k8s-buildingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: myspace
spec:
  ingressClassName: ingress-nginx
  rules:
  # 映射到servcie的域名
  - host: "foo.api.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
	    # 指向service name
            name: svc1
            port:
	      # 指向service暴露出的port
              number: 8001
